--- a/style.css
+++ b/style.css
@@ -341,9 +341,136 @@ footer {
 .social-media i {
   color: rgb(24, 24, 152);
   font-size: 2rem;
+  color: white;
 }
 
 /* Mobile view */
+
+@media (max-width: 1629px) {
+  .about-info p {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+  }
+
+  .card h3 {
+    font-size: 1.9rem;
+  }
+
+  .p-wrapper p {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 1501px) {
+  .about-info p {
+    font-size: 1rem;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 1323px) {
+  .nav-list {
+    width: 50%;
+  }
+
+  .nav-list li a {
+    font-size: 1.2rem;
+  }
+
+  .intro h1 {
+    font-size: 2.3rem;
+  }
+
+  .intro h1 span {
+    font-size: 2.4rem;
+  }
+
+  .intro-photo {
+    width: 30%;
+    height: 50%;
+  }
+}
+
+@media (max-width: 1159px) {
+  .skill {
+    height: 200vh;
+  }
+
+  .skill-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    height: 100%;
+  }
+
+  .skill-row {
+    width: 50%;
+    height: 20%;
+  }
+
+  .intro-photo {
+    width: 30%;
+    height: 40%;
+  }
+
+  .contact-wrapper form {
+    width: 40%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .form-group label {
+    font-size: 1.3rem;
+  }
+
+  .form-group input,
+  textarea {
+    font-size: 1.3rem;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .contact-message {
+    width: 50%;
+    height: 70%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-message h1 {
+    font-size: 2rem;
+    font-weight: 200;
+    text-align: center;
+    letter-spacing: 2px;
+  }
+
+  .social-media {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
+
+@media (max-width: 989px) {
+  .about-info p {
+    font-size: 0.8rem;
+    margin-bottom: 20px;
+  }
+
+  .skill-row {
+    width: 60%;
+    height: 20%;
+  }
+}
 
 @media only screen and (max-width: 768px) {
   .nav-list {
