--- a/style.css
+++ b/style.css
@@ -473,6 +473,15 @@ footer {
 }
 
 @media only screen and (max-width: 768px) {
+  .header-wrapper {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
   .nav-list {
     width: 100%;
     text-align: center;
@@ -495,5 +504,339 @@ footer {
 
   .menu-toggle {
     display: flex;
+  }
+
+  .intro {
+    width: 70%;
+    height: 20vh;
+    text-align: center;
+    margin-left: 30px;
+
+    .intro h1 {
+      font-size: 2rem;
+    }
+
+    .intro h1 span {
+      font-size: 2.4rem;
+    }
+
+    .intro-photo {
+      width: 50%;
+      height: 20%;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+@media only screen and (max-width: 742px) {
+  .about-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .about-info {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .about-wrapper img {
+    display: none;
+  }
+
+  .about-info p {
+    font-size: 1.1rem;
+    letter-spacing: 2px;
+    font-weight: 200;
+    text-align: justify;
+  }
+
+  .intro h1 span {
+    font-size: 2.4rem;
+  }
+
+  .intro-photo {
+    width: 50%;
+    height: 40%;
+    margin-bottom: 20px;
+  }
+}
+
+@media only screen and (max-width: 692px) {
+  .about-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .about-info {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .about-wrapper img {
+    display: none;
+  }
+
+  .about-info p {
+    font-size: 1.1rem;
+    letter-spacing: 2px;
+    font-weight: 200;
+    text-align: justify;
+  }
+
+  .intro h1 span {
+    font-size: 2.4rem;
+  }
+
+  .intro-photo {
+    width: 50%;
+    height: 40%;
+    margin-bottom: 20px;
+  }
+}
+
+@media only screen and (max-width: 654px) {
+  .intro h1 {
+    font-size: 1.5rem;
+  }
+
+  .intro h1 span {
+    font-size: 2.4rem;
+  }
+
+  .about-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .about-info {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .about-wrapper img {
+    display: none;
+  }
+
+  .about-info p {
+    font-size: 1rem;
+    letter-spacing: 2px;
+    font-weight: 200;
+    text-align: justify;
+  }
+
+  .card i {
+    font-size: 3rem;
+  }
+
+  .p-wrapper p {
+    font-size: 0.8rem;
+  }
+
+  .contact-message {
+    display: none;
+  }
+
+  .contact-wrapper {
+    width: 80%;
+    height: 80%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .contact-wrapper form {
+    width: 100%;
+    height: 100%;
+  }
+
+  .contact {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 530px) {
+  .about-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .about-info {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .about-wrapper img {
+    display: none;
+  }
+
+  .about-info p {
+    font-size: 0.9rem;
+    letter-spacing: 2px;
+    font-weight: 200;
+    text-align: justify;
+  }
+
+  .intro h1 span {
+    font-size: 2.4rem;
+  }
+
+  .contact {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .form-group label {
+    font-size: 1rem;
+  }
+  .form-group input,
+  textarea {
+    font-size: 1rem;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .intro h1 span {
+    font-size: 1.6rem;
+  }
+}
+
+@media only screen and (max-width: 488px) {
+  .about-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .about-info {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .about-info h1 {
+    font-size: 2rem;
+  }
+
+  .about-wrapper img {
+    display: none;
+  }
+
+  .about-info p {
+    font-size: 0.8rem;
+    letter-spacing: 2px;
+    font-weight: 200;
+    text-align: justify;
+  }
+
+  .intro h1 span {
+    font-size: 2.4rem;
+  }
+
+  .contact {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .form-group label {
+    font-size: 1rem;
+  }
+  .form-group input,
+  textarea {
+    font-size: 1rem;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .intro h1 span {
+    font-size: 1.6rem;
+  }
+
+  .intro-photo {
+    width: 60%;
+    height: 40%;
+  }
+
+  .card i {
+    font-size: 1.6rem;
+  }
+
+  .p-wrapper p {
+    font-size: 0.9rem;
+  }
+
+  .skill-row {
+    width: 90%;
+    height: 20%;
+  }
+
+  .copyright small {
+    letter-spacing: 2px;
+    font-size: 0.6rem;
+  }
+
+  .social-media {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
   }
 }
