--- a/style.css
+++ b/style.css
@@ -942,3 +942,105 @@ footer {
     align-items: center;
   }
 }
+
+@media (max-width: 333px) {
+  .about-wrapper {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .about-info {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .about-info h1 {
+    font-size: 1.5rem;
+  }
+
+  .about-wrapper img {
+    display: none;
+  }
+
+  .about-info p {
+    font-size: 0.5rem;
+    font-weight: 200;
+    text-align: justify;
+    line-height: 15px;
+  }
+
+  .about-info small {
+    font-size: 0.6rem;
+  }
+
+  .contact {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .form-group label {
+    font-size: 1rem;
+  }
+  .form-group input,
+  textarea {
+    font-size: 1rem;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  .intro h1 span {
+    font-size: 1.6rem;
+  }
+
+  .intro-photo {
+    width: 60%;
+    height: 40%;
+  }
+
+  .card i {
+    font-size: 1.6rem;
+  }
+
+  .p-wrapper p {
+    font-size: 0.9rem;
+  }
+
+  .skill-row {
+    width: 90%;
+    height: 20%;
+  }
+
+  .card h3 {
+    font-size: 1.2rem;
+  }
+
+  .p-wrapper p {
+    font-size: 0.7rem;
+  }
+
+  .copyright small {
+    letter-spacing: 2px;
+    font-size: 0.6rem;
+  }
+
+  .social-media {
+    width: 60%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+}
